Finish up temporal